<resources>
    <string name="app_name">Movie App</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="movie_not_found">Movie not found</string>
    <string name="search_movie">Search Movie</string>
    <string name="image_movie">image movie</string>
    <string name="episodes">Episodes</string>
    <string name="back_layout">back layout</string>
    <string name="favorite_movie">favorite movie</string>
    <string name="description">Description</string>
    <string name="icon_fav">❤️</string>
    <string name="no_favorite_movies">No favorite movies</string>
    <string name="icon_search">🔎</string>
    <string name="icon_not_found">🎭</string>
    <string name="station">Station: </string>
    <string name="status">Status: </string>
    <string name="start">Start: </string>
    <string name="show_description">Show description</string>
    <string name="images_slide">images slide</string>
</resources>