<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="search"
            type="com.example.movieapp.viewModel.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Search">

        <EditText
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:autofillHints="name"
            android:background="@drawable/background_elements"
            android:hint="@string/search"
            android:inputType="text"
            android:padding="10dp"
            android:text="@={search.movieName}"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="15dp"
            android:clickable="true"
            android:contentDescription="@string/search_movie"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="@{()->search.searchMovie()}"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@id/input_search"
            app:layout_constraintEnd_toEndOf="@id/input_search"
            app:layout_constraintTop_toTopOf="@id/input_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_search"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_search" />

        <LinearLayout
            android:id="@+id/not_found_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_not_found"
                android:textSize="50sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_not_found"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_movie_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_search"
                android:textSize="50sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_movie"
                android:textSize="18sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>